fixes #5955 / BZ 1094633 - update the content dashboard for content views
This commit is to update the content dashboard to properly show
content view details, which was lost with the content view rework.

Since there is overlap in the information that was in both
the content view and promotions widget, this commit also
removes the promotions widget and shows all details in the
content views widget.

--- a/app/assets/stylesheets/katello/dashboard.scss
+++ b/app/assets/stylesheets/katello/dashboard.scss
@@ -267,7 +267,7 @@ $col_width: (($static_width) * 0.5);
       }
     }
 
-    #dashboard_promotions, #dashboard_content_views {
+    #dashboard_content_views {
       h5 {
         display: inline;
       }
@@ -276,24 +276,19 @@ $col_width: (($static_width) * 0.5);
         padding-bottom: 0;
       }
       .row_item {
-        .col_1 {
-          white-space: nowrap;
-          width: $width * .6;
-          padding-right: 10px;
-          overflow: hidden;
+        .col_1, .col_2, .col_3 {
           display: inline-block;
-          margin-bottom: -5px;
-          text-overflow: ellipsis;
-
-          &.environment {
-            vertical-align: top;
-          }
+          overflow: hidden;
+          margin-bottom:-5px;
         }
-        .col_2 {
-          display: inline-block;
-          width: 115px;
-          overflow: hidden;
-          margin-bottom: -5px;
+        .col_1, .col_2 {
+          white-space: nowrap;
+          width: 150px;
+          padding-right: 10px;
+          text-overflow: ellipsis;
+        }
+        .col_3 {
+          width: 100px;
         }
       }
     }
